new version of phone app

--- a/index.html
+++ b/index.html
@@ -1,24 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <link href="src/main.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.1/css/all.css" integrity="sha384-O8whS3fhG2OnA5Kas0Y9l3cfpmYjapjI0E4theH4iuMD+pLhbf6JI0jIMfYcK3yZ" crossorigin="anonymous">
-    <meta charset="UTF-8">
-    <title>Phone App</title>
-</head>
-<body>
-<div class="main">
-    <div class="app-header">
-        My Phone App
-    </div>
-    <div class="app-content">
-        <table class="contact-table" cellspacing="0" cellpadding="0">                      
-        </table>       
-    </div>
-    <div class="app-footer">
-        <div></div>
-    </div>
-</div>
-<script src="src/main.js"></script>
-</body>
+	<head>
+		<meta charset="utf-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<title>Contacts</title>
+		<link href="https://fonts.googleapis.com/css?family=Oxygen" rel="stylesheet">
+		<link href="css/bootstrap.css" rel="stylesheet">
+		<link rel="stylesheet" href="css/main.css">
+	</head>
+	<body>
+			
+		<script src="src/js/model.js"></script>
+		<script src="src/js/view.js"></script>
+		<script src="src/js/contacts.js"></script>
+		<script src="src/js/controller.js"></script>
+		<script src="src/js/app.js"></script>
+		
+	</body>
 </html>
