--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 	</head>
 	<body>
 			
-		<script src="src/js/model.js"></script>
-		<script src="src/js/view.js"></script>
-		<script src="src/js/contacts.js"></script>
-		<script src="src/js/controller.js"></script>
-		<script src="src/js/app.js"></script>
+		<script src="js/model.js"></script>
+		<script src="js/view.js"></script>
+		<script src="js/contacts.js"></script>
+		<script src="js/controller.js"></script>
+		<script src="js/app.js"></script>
 		
 	</body>
 </html>
