--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 		<link rel="stylesheet" href="css/main.css">
 	</head>
 	<body>
-			
+		bundle.js	
+//
+
 		<script src="js/model.js"></script>
 		<script src="js/view.js"></script>
 		<script src="js/contacts.js"></script>
