--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 		<link rel="stylesheet" href="css/main.css">
 	</head>
 	<body>
-		bundle.js	
-//
 
 		<script src="js/model.js"></script>
 		<script src="js/view.js"></script>
 		<script src="js/contacts.js"></script>
+		<script src="js/keypad.js"></script>
+		<script src="js/add_contact.js"></script>
 		<script src="js/controller.js"></script>
 		<script src="js/app.js"></script>
 		
